--- a/Jardines2022.Web/Views/Proveedores/Index.cshtml
+++ b/Jardines2022.Web/Views/Proveedores/Index.cshtml
@@ -1,7 +1,323 @@
-﻿@section scripts
+﻿@{ ViewBag.Title = "Index";}
+<div>
+    <main id="main" class="main">
+        <div class="card mt-3">
+            <div class="card-body">
+                @*<a href="" class="btn btn-primary btn-lgs mt-3 bi-plus-lg"> Nuevo Producto</a>*@
+                <button type="button" class="btn btn-primary btn-lgs mt-3 bi-plus-lg" onclick="abrirModal()">Nuevo Proveedor</button>
+            </div>
+        </div>
+        <div class="pagetitle">
+            <h1>Listado de proveedores</h1>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
+                    <li class="breadcrumb-item">Socios</li>
+                    <li class="breadcrumb-item active">Proveedores</li>
+                </ol>
+            </nav>
+        </div><!-- End Page Title -->
+        <div class="card">
+            <div class="card-body mt-3">
+                <!-- Table -->
+                <table id="tabla" class="table display cell-border" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Proveedor</th>
+                            <th>Dirección</th>
+                            <th>CP</th>
+                            <th>Ciudad</th>
+                            <th>País</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
+</div>
+<!-- Inicio del modal -->
+<div class="modal fade modal-lg" id="FormModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Producto</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="txtProveedorId" value="0" />
+                <div class="row">
+                    <div class="col-md-12">
+                        <label for="txtNombreProveedor" class="form-label">Nombre del Proveedor</label>
+                        <input type="text" class="form-control" id="txtNombreProveedor" placeholder="Ingrese el nombre">
+                    </div>
+
+                    <div class="col-md-12">
+                        <label for="txtDireccion" class="form-label">Direccion</label>
+                        <input type="text" class="form-control" id="txtDireccion" placeholder="Ingrese la dirección">
+
+                    </div>
+                    <div class="col-md-12">
+                        <label for="txtCP" class="form-label">Codigo Postal</label>
+                        <input type="text" class="form-control" id="txtCP" placeholder="Ingrese el codigo postal">
+                    </div>
+                </div>
+
+                <div class="row mt-3">
+
+                    <div class="col-md-6">
+                        <label for="cboPais" class="form-label">País</label>
+                        <select id="cboPais" class="form-select" aria-label="Default select example" onchange="CargarCboCiudad()">
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="cboCiudad" class="form-label">Ciudad</label>
+                        <select id="cboCiudad" class="form-select" aria-label="Default select example">
+                        </select>
+                    </div>
+
+                </div>
+                <!--MENSAJE DE ERROR-->
+                <div class="row mt-3">
+                    <div class="col-12">
+                        <div id="mensajeError" class="alert alert-danger" role="alert">
+                            A simple danger alert—check it out!
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="Guardar()">Guardar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--INICIO DEL SCRIPT-->
+@section scripts
 {
     <script>
-        jQuery.ajax({
+        var tabla;
+        var filaSeleccionada;
+
+        $(document).ready(function () {
+            cargarTabla();
+            CargarCboPais();
+            $("#tabla tbody").on("click", '.btn-editar', function () {
+                filaSeleccionada = $(this).closest("tr");
+                var datos = tabla.row(filaSeleccionada).data();
+                abrirModal(datos);
+            });
+            $("#tabla tbody").on("click", ".btn-borrar", function () {
+                var proveedorABorrar = $(this).closest("tr");
+                var datosProveedor = tabla.row(proveedorABorrar).data();
+
+                console.log(datosProveedor);
+                debugger;
+                swal({
+                    title: "¿Estas seguro?",
+                    text: "¿Quieres eliminar este registro?",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonClass: "btn-danger",
+                    confirmButtonText: "SI",
+                    cancelButtonText: "NO",
+                    closeOnConfirm: false
+                },
+                    function () {
+                        jQuery.ajax({
+                            url: "@Url.Action("Eliminar","Proveedores")",
+                            type: "POST",
+                            data: JSON.stringify({ id: datosProveedor.ProveedorId }),
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            success: function (data) {
+                                if (data.resultado) {
+                                    tabla.row(proveedorABorrar).remove().draw();
+                                    swal("Borrado!", "Registro eliminado!!!", "success");
+                                } else {
+                                    swal("Ne se ha podido eliminar el registro", data.mensaje, "error");
+                                }
+                            },
+                            error: function (error) { console.log(error); },
+                            beforeSend: function () { }
+                        });
+                    }
+                );
+            });
+        });
+
+        //ABRIR EL MODAL
+        function abrirModal(jsonProveedor) {
+            $("#mensajeError").hide();
+            $("#txtProveedorId").val(0);
+            $("#txtNombreProveedor").val("");
+            $("#txtDireccion").val("");
+            $("#txtCP").val("");
+            $("#cboPais").val($("#cboPais option:first"));
+            $("#cboCiudad").empty();
+            if (jsonProveedor != null) {
+                $("#txtProveedorId").val(jsonProveedor.ProveedorId);
+                $("#txtNombreProveedor").val(jsonProveedor.NombreProveedor);
+                $("#txtDireccion").val(jsonProveedor.Direccion);
+                $("#txtCP").val(jsonProveedor.CodigoPostal);
+                $("#cboPais").val(jsonProveedor.PaisId);
+                $("#cboCiudad").val(jsonProveedor.CiudadId);
+            }
+            $("#FormModal").modal("show");
+        }
+        //CARGAR DATOS A LA TABLA
+        function cargarTabla() {
+                tabla = $("#tabla").DataTable({
+                responsive: "true",
+                ordering: "false",
+                "ajax": {
+                    url: "@Url.Action("ListarProveedores", "Proveedores")",
+                    type: "GET",
+                    dataType: "json"
+                },
+                "columns": [
+                    { "data": "NombreProveedor" },
+                    { "data": "Direccion" },
+                    { "data": "CodigoPostal" },
+                    {
+                        "data": "ciudad",
+                        render: function (data) {
+                        return data.NombreCiudad;
+                        }
+                    },
+                    {
+                        "data": "pais",
+                        render: function(data) {
+                            return data.NombrePais;
+                        }
+                    },
+                    {
+                        "defaultContent": '<button type="button" class="btn btn-warning btn-sm btn-editar"><i class="fas fa-pen"></i></button>' +
+                            '<button type="button" class="btn btn-danger btn-sm btn-borrar" ><i class="fas fa-trash"></i></button>',
+                        "orderable": false,
+                        "searchable": false,
+                        "width": "90px"
+
+                    }
+                ],
+                "language": {
+                    "url": "https://cdn.datatables.net/plug-ins/1.12.1/i18n/es-ES.json"
+                }
+            });
+        }
+        //CARGAR COMBOS
+        function CargarCboPais() {
+            jQuery.ajax({
+                url: "@Url.Action("ListarPaises","Paises")",
+                type: "GET",
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (pais) {
+                    console.log(pais);
+                    $("#cboPais").append('<option value="0">' + "Seleccionar" + '</option>');
+                    $.each(pais.data, function (index, pais) {
+                        $("#cboPais").append('<option value="' + pais.PaisId + '">'+pais.NombrePais + '</option>');
+                    });
+                }
+            });
+        }
+        function CargarCboCiudad() {
+            $("#cboCiudad").empty();
+            $("#cboCiudad").append('<option value="0" disabled >Seleccionar</option>');
+            $.ajax({
+                url: '@Url.Action("ListarCiudadesPorPais", "Ciudad")',
+                type: 'GET',
+                dataType: 'json',
+                data: {
+                    id: $("#cboPais").val()
+                },
+                success: function (ciudades) {
+                    console.log(ciudades);
+                    $.each(ciudades, function (i, ciudad) {
+                        $("#cboCiudad").append('<option value="' + ciudad.CiudadId + '">' + ciudad.NombreCiudad + '</option>');
+                    });
+                    $("#cboCiudad").val($("#cboCiudad option:first").val());
+                },
+                error: function (ex) {
+                    alert('Error al cargar las ciudades.' + ex);
+                }
+            });
+            return false;
+        };
+        //AGREGAR-EDITAR NUEVO PROVEEDOR
+        function Guardar() {
+            var proveedor = {
+                ProveedorId: $("#txtProveedorId").val(),
+                NombreProveedor: $("#txtNombreProveedor").val(),
+                Direccion: $("#txtDireccion").val(),
+                CodigoPostal: $("#txtCP").val(),
+                PaisId: $("#cboPais option:Selected").val(),
+                pais: {
+                    PaisId: $("#cboPais option:Selected").val(),
+                    NombrePais: $("#cboPais option:Selected").text(),
+                },
+                CiudadId: $("#cboCiudad option:Selected").val(),
+                ciudad: {
+                    CiudadId: $("#cboCiudad option:Selected").val(),
+                    NombreCiudad: $("#cboCiudad option:Selected").text(),
+                }
+            };
+            console.log(proveedor);
+            debugger;
+            var request = new FormData();
+            request.append("objeto", JSON.stringify(proveedor));
+
+            jQuery.ajax({
+                url: "@Url.Action("Guardar","Proveedores")",
+                type: "POST",
+                data: request,
+                processData: false,
+                contentType: false,
+                success: function (data) {
+                    $(".modal-body").LoadingOverlay("hide");
+                    if (proveedor.ProveedorId == 0) {
+                        debugger;
+                        if (data.resultado != 0) {
+                            proveedor.ProveedorId = data.resultado;
+                            tabla.row.add(proveedor).draw(false);
+                            $("#FormModal").modal("hide");
+                        } else {
+                            $("#mensajeError").text(data.mensaje);
+                            $("#mensajeError").show();
+                        }
+                    } else {
+                        if (data.resultado != 0) {
+                            tabla.row(filaSeleccionada).data(proveedor).draw(false);
+                            filaSeleccionada = null;
+                            $("#FormModal").modal("hide");
+                        } else {
+                            $("#mensajeError").text(data.mensaje);
+                            $("#mensajeError").show();
+                        }
+                    }
+                },
+                error: function (error) { },
+                beforeSend: function () {
+                    $(".modal-body").LoadingOverlay("show", {
+                        imageResizeFactory: 2,
+                        text: "Guardando...",
+                        size: 14
+                    });
+                }
+            });
+
+        }
+
+
+
+
+        @*jQuery.ajax({
             url: "@Url.Action("ListarProveedores", "Proveedores")",
             type: "GET",
             dataType: "json",
@@ -10,7 +326,7 @@
                 debugger;
                 console.log(data);
             }
-        })
+        })*@
     </script>
 }
 
