--- a/Jardines2022.Web/Views/Ciudad/Create.cshtml
+++ b/Jardines2022.Web/Views/Ciudad/Create.cshtml
@@ -17,8 +17,8 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.PaisId, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.PaisId, new SelectList(Model.Pais, "PaisId", "NombrePais"), "Seleccionar el País", new { htmlAttributes = new { @class = "form-control" } })
+                <div class="col-sm-10"aria-label="Default select example">
+                    @Html.DropDownListFor(model => model.PaisId, new SelectList(Model.Pais, "PaisId", "NombrePais"), "Seleccionar el País", new { @class = "form-select" })
                     @Html.ValidationMessageFor(model => model.PaisId, "", new { @class = "text-danger" })
                 </div>
             </div>
