--- a/Jardines2022.Web/Views/Shared/_Layout.cshtml
+++ b/Jardines2022.Web/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <a href="@Url.Action("Index","Home")" class="logo d-flex align-items-center">
                 <img src="~/Content//img/logo.png" alt="">
-                <span class="d-none d-lg-block">Jardines</span>
+                <span class="d-none d-lg-block">Jardines Verdes</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div><!-- End Logo -->
@@ -209,15 +209,16 @@
             </li><!-- End Compras Nav -->
             <li class="nav-heading">Sobre nosotros</li>
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-faq.html">
-                    <i class="bi bi-question-circle"></i>
-                    <span>Preguntas Frecuentes</span>
-                </a>
-            </li><!-- End F.A.Q Page Nav -->
+            @*<li class="nav-item">
+                    <a class="nav-link collapsed" href="pages-faq.html">
+                        <i class="bi bi-question-circle"></i>
+                        <span>Preguntas Frecuentes</span>
+                    </a>
+                </li>*@
+            <!-- End F.A.Q Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-contact.html">
+                <a class="nav-link collapsed" href="@Url.Action("Contact","Home")">
                     <i class="bi bi-envelope"></i>
                     <span>Contacto</span>
                 </a>
@@ -225,6 +226,7 @@
         </ul>
 
     </aside><!-- End Sidebar-->
+
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -256,6 +258,19 @@
     *@
     @RenderSection("scripts", required: false)
 
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+        <div class="copyright">
+            &copy; Copyright <strong><span>Jardines Verdes</span></strong>. Todos los derechos reservados
+        </div>
+        <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
+            Diseñado por <a>NiceAdmin</a>
+        </div>
+    </footer><!-- End Footer -->
 </body>
 
 </html>
