--- a/Jardines2022.Web/Views/Ciudad/Delete.cshtml
+++ b/Jardines2022.Web/Views/Ciudad/Delete.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Jardines2022.Web.Models.Ciudad.CiudadListVm
-@{ 
-    ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<main id="main"class="main">
+
+<main id="main" class="main">
     <h3>Estas seguro de eliminar este registro?</h3>
     <div>
         <hr />
         <dl class="dl-horizontal">
+            @Html.HiddenFor(model=>model.CiudadId)
+
             <dt>
                 @Html.DisplayNameFor(model => model.NombreCiudad)
             </dt>
@@ -17,11 +16,11 @@
             </dd>
 
             <dt>
-                @Html.LabelFor(model => model.Pais, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.DisplayNameFor(model => model.Pais)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.Pais, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.Pais)
             </dd>
 
         </dl>
@@ -29,9 +28,12 @@
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-            <div class="form-actions no-color">
-                <input type="submit" value="Borrar" class="btn btn-primary" />
-                @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-success" })
+
+            <div class="form-group mt-3">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                    @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-success" })
+                </div>
             </div>
         }
     </div>
