--- a/Jardines2022.Web/Views/Acceso/CambiarClave.cshtml
+++ b/Jardines2022.Web/Views/Acceso/CambiarClave.cshtml
@@ -52,25 +52,29 @@
                                 <div class="card-body">
 
                                     <div class="pt-4 pb-2">
-                                        <h5 class="card-title text-center pb-0 fs-4">Ingresar a tu cuenta</h5>
-                                        <p class="text-center small">Ingresar el correo y la contraseña</p>
+                                        <h5 class="card-title text-center pb-0 fs-4">Cambiar contraseña</h5>
+                                        <p class="text-center small">Ingresar la contraseña que se te envio por mail</p>
                                     </div>
 
-                                    <form class="row g-3 needs-validation" novalidate action="@Url.Action("LogIn","Acceso")"method="post">
-                                        <div class="col-12">
-                                            <label for="correo" class="form-label">Correo</label>
-                                            <input type="email" name="correo" class="form-control" autocomplete="off"required>
-                                        </div>
-
+                                    <form class="row g-3 needs-validation" action="@Url.Action("CambiarClave","Acceso")" method="post">
+                                        <imput class="form-control" name="usuarioId" type="hidden" value="@TempData["usuarioId"]"/>
                                         <div class="col-12">
                                             <label for="clave" class="form-label">Clave</label>
+                                            <input type="password" name="clave" class="form-control" autocomplete="off" required value="@ViewData["vClave"]"/>
+                                        </div>
+                                        <div class="col-12">
+                                            <label for="nuevaClave" class="form-label">Nueva Clave</label>
                                             <input type="password" name="clave" class="form-control" autocomplete="off" required>
                                         </div>
                                         <div class="col-12">
-                                            <button class="btn btn-primary w-100" type="submit">Ingresar</button>
+                                            <label for="confirmarClave" class="form-label">Confirmar Clave</label>
+                                            <input type="password" name="clave" class="form-control" autocomplete="off" required>
                                         </div>
                                         <div class="col-12">
-                                            <p class="small mb-0">No tienes cuenta? <a href="@Url.Action("Registrarse","Acceso")">Registrarse</a></p>
+                                            <button class="btn btn-primary w-100" type="submit">Cambiar</button>
+                                        </div>
+                                        <div class="col-12">
+                                            <p class="small mb-0">Ya tienes cuenta? <a href="@Url.Action("LogIn","Acceso")">Ingresar</a></p>
                                         </div>
                                     </form>
 
@@ -103,3 +107,4 @@
 </body>
 
 </html>
+
