Completar datos cuenta

--- a/Jardines2022.Web/Views/Shared/_Layout.cshtml
+++ b/Jardines2022.Web/Views/Shared/_Layout.cshtml
@@ -177,7 +177,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
+                        <a class="dropdown-item d-flex align-items-center" href="@Url.Action("ConfiguracionCuenta","Acceso")">
                             <i class="bi bi-person"></i>
                             <span>Completar cuenta</span>
                         </a>
