--- a/Jardines2022.Web/Views/Acceso/ConfiguracionCuenta.cshtml
+++ b/Jardines2022.Web/Views/Acceso/ConfiguracionCuenta.cshtml
@@ -102,6 +102,8 @@
             <div class="modal-body">
                 <input type="hidden" id="txtUsuarioId"  value="0"/>
                 <div class="row">
+                    <h5>Una vez completado se le pedira que reloguear</h5>
+                    <hr />
                     <div class="col-md-12">
                         <label for="txtClave" class="form-label">Clave</label>
                         <input type="password" class="form-control" id="txtClave" placeholder="Clave" autocomplete="off">
@@ -115,8 +117,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" onclick="Guardar()">Aceptar</button>
@@ -124,7 +124,22 @@
         </div>
     </div>
 </div>
-
+                                <!--MODAL LOGOUT-->
+<div class="modal fade modal-sm" id="ModalLogOut" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="row">
+                    <h4>Para que los cambios se vean reflejados es necesario reloguear.</h4>
+                </div>
+                <a class="btn btn-primary" href="@Url.Action("LogOut","Acceso")">
+                    <i class="bi bi-box-arrow-right"></i>
+                    <span>Salir</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 @section scripts
 {
     <script>
@@ -178,6 +193,7 @@
                         if (data.resultado != 0) {
                             usuario.UsuarioId = data.resultado;
                             $("#FormModal").modal("hide");
+                            $("#ModalLogOut").modal("show");
                         } else {
                             $("#mensajeError").text(data.mensaje);
                             $("#mensajeError").show();
@@ -199,11 +215,8 @@
                         size: 14
                     });
                 }
-
             });
         }
-
-
 
         //CARGAR COMBOS
         function CargarCboPais() {
@@ -247,5 +260,8 @@
             });
             return false;
         };
+
+        //CERRAR CESION
+
     </script>
 }
